tests/valid/Statements_Syntax/test1.vyp
void main(void) {
    int a;
    a = 5;
    if (a > 0) {
        print("Positive\n");
    } else {
        print("Non-positive\n");
    }
}
