tests/invalid/Statements_Syntax/Invalid_Character.vyp
void main(void) {
    int a;
    a = 5 $ 3;  // Invalid character `$`
}
